# cajabamboo

./: Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  astro.config.mjs  eslint.config.js  jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/pages/: index.astro
frontend/pages/example/: index.astro
frontend/src/lib/: env.js
frontend/src/routes/: +page.server.js  +page.svelte
openapi/: api-doc.html  nginx.conf  openapi.yaml
